--- a/box-o-maps/package.json
+++ b/box-o-maps/package.json
@@ -13,6 +13,7 @@
     "st": "^3.0.0"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.1"
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "htm": "^3.1.1"
   }
 }
